fix border, remove expand/collapse from mobile view

--- a/working-on/sliding-nav/layered-theme-menu.css
+++ b/working-on/sliding-nav/layered-theme-menu.css
@@ -141,14 +141,7 @@
 
 /* MR heading */
 @media screen and (min-width: 992px) {
-  .alpha .test-gcweb-menu [role=menu] [role=menu] [role=menuitem][aria-haspopup=true], .alpha .test-gcweb-menu [role=menu] [role=menu] [role=menuitem][aria-haspopup=true]:hover {
-      color: #333 !important;
-      background-color: white !important;
-      /*font-size: 20px;*/
-      padding-left: 1em;
-      border-left: 2px solid #f5f5f5;
-  }
-
+  
   .alpha .test-gcweb-menu [role=menu] {
     position: relative;
   }
@@ -244,6 +237,15 @@
     }
 }
 
+@media screen and (min-width: 1200px) {
+    .alpha .test-gcweb-menu .mr {
+        padding-left: 1em;
+        border-left: 2px solid #f5f5f5;
+        padding-bottom: 0;
+        margin-bottom: 0;
+        padding-bottom: 10px;
+    }
+}
 /* CANADA.CA */
 
 .home .test-gcweb-menu {
